tests/errors/zone-freestanding.ari
fn main() -> i64 {
  var zone = zone::create(64);
  zone::destroy(zone);
  return 0;
}
